--- a/report/paper.tex
+++ b/report/paper.tex
@@ -212,13 +212,13 @@ Graduate
 
 % Write abstract here
 \begin{abstract}
-Gradient descent plays an important role in machine learning. It can help us get the global optimal value of a function. However, one of the most important task in machine learning is to get the optimal value for loss function. Gradient descent is widely used in this task. However, people gradually find that traditional gradient descent performs not well when dealing with some tasks. Therefore, there are many modified gradient descent methods which are proposed. I implement NAG, RMSProp, AdaDelta and Adam in logistic regression and linear regression in this experiment.
+Gradient descent plays an important role in machine learning. It can help us get the optimal value of a function. However, one of the most important task in machine learning is to get the optimal value for loss function. Gradient descent is widely used in this task. However, people gradually find that traditional gradient descent performs not well when dealing with some tasks. Therefore, there are many modified gradient descent methods which are proposed. I implement NAG, RMSProp, AdaDelta and Adam in logistic regression and linear regression in this experiment.
 \end{abstract}
 
 % Each section begins with a \section{title} command
 \section{Introduction}
 	% \PARstart{}{} creates a tall first letter for this first paragraph
-\PARstart{G}{radient} descent is a important method in machine learning. The most important tasks in many machine learning models is to update or calculate their parameters which can lead the corresponding loss functions value to be minimal value. Although gradient descent is widely used, researchers find that it has its own limitation. Therefore, there are many modified gradient descent methods which are proposed, \emph{e.g}. NAG, RMSProp, AdaDelta. In this experiment, I implement logistic regression and linear classification. And I use different methods to optimize their loss functions. My experiments' results show that all of them can lead the loss functions to global minimal. However, their speed may be different.
+\PARstart{G}{radient} descent is a important method in machine learning. The most important tasks in many machine learning models is to update or calculate their parameters which can lead the corresponding loss functions value to be minimal value. Although gradient descent is widely used, researchers find that it has its own limitation. Therefore, there are many modified gradient descent methods which are proposed, \emph{e.g}. NAG, RMSProp, AdaDelta and Adam. In this experiment, I implement logistic regression and linear classification. And I use different methods to optimize their loss functions. My experiments' results show that all of them can optimize the models. However, their speed may be different.
 
 % Main Part
 \section{Methods and Theory}
@@ -261,7 +261,7 @@ In Eq.~\eqref{eq5}, $n$ is the total number of data and $y_i$ is the target valu
 \end{aligned}
 \end{equation}
 
-After we get the the derivation of Eq.~\eqref{eq6}, we can calculate the derivative according to Eq.~\eqref{eq7} and update weight matrix according Eq.~\eqref{eq1}
+After we get the the derivation of Eq.~\eqref{eq6}, we can calculate the gradient according to Eq.~\eqref{eq7} and update weight matrix according Eq.~\eqref{eq1}
 
 In the linear classification task, I use the Eq.~\eqref{eq8} to calculate output.
 \begin{equation}
@@ -289,11 +289,11 @@ g_w(x_i)=\begin{cases}
 \label{eq11}
 \end{equation}
 
-We can update the linear classification according to Eq.~\eqref{eq1} and use Eq.~\eqref{eq11} to calculate the derivative.
+We can update the linear classification according to Eq.~\eqref{eq1} and use Eq.~\eqref{eq11} to calculate the gradient.
 
 In this experiment, I not only used traditional gradient descent to train the models, but also use modified gradient descent. Their introduction is in the following.
 
-Nesterov accelerated gradient(NAG) is method which considered momentum. It can be calculated as following:
+Nesterov accelerated gradient(NAG) is a method which considers momentum. It can be calculated as following:
 \begin{equation}
 g_t=\Delta L(W_{t-1} - \gamma v_{t-1}) \label{eq12}
 \end{equation}
@@ -303,7 +303,7 @@ v_t = \gamma v_{t-1} + \eta g_t \label{eq13}
 \begin{equation}
 W_t = W_{t-1} - v_t \label{eq14}
 \end{equation}
-where $\gamma$ and $\eta$ are hyperparameters which can be set to be 0.9 and 0.1 respectively.
+where $\gamma$ and $\eta$ are hyperparameters which can be set to be 0.9 and 0.1 respectively. $\eta$ is treated as the learning rate which is mentioned in Eq.~\eqref{eq1}.
 
 RMSProp is a method which can solve the problem of AdaGrad that the learning rate tends to be 0. It can be calculated as following:
 \begin{equation}
@@ -352,34 +352,34 @@ v'_t=v_t/(1-\beta_2^t) \label{eq27}
 \begin{equation}
 weight = weight - \eta m'_t / (\sqrt{v'_t+\epsilon})
 \end{equation}
-where $t$ is initialized to be 0 and add 1 at each step.
+where $t$ is initialized to be 0 and add 1 at the beginning of each iterations.
 
-After choosing the loss function and calculate their corresponding derivation, I can use different kinds of gradient descent to train these two models. My experiment will be described in following.
+After choosing the loss function and calculating their corresponding derivation, I can use different kinds of gradient descent to train these two models. When I calculate the gradient descent in this experiments, I don't use all of data. I randomly choose some of them to calculate the gradient. My experiment will be described in following.
 
 \section{Experiments}
 There will be two experiments which will be introduced. One is training the logistic regression and the other is training the linear classification. Both of them is trained in different kinds of gradient descent.
 
 \subsection{Dataset}
-I use a9a dataset in LIBSVM Data to train and test this two models. There are 32561 data in training set and 16281 data in test set. Each of them has 123 attribute.
+I use a9a dataset in LIBSVM Data to train and test this two models. There are 32561 data in training set and 16281 data in test set. Each of them has 123 attributes.
 
 \subsection{Implementation}
 In this section, I will introduce the logistic regression experiment and linear classification experiment in detail.
 
 There are different kinds of gradient descent in this experiment, the parameters I used is in the following.
 
-\paragraph{Traditional Gradient Descent} Learning rate $a$ is set to be 0.1, and I will choose 20\% randomly of data from training set to train.
+\paragraph{Traditional Gradient Descent} Learning rate $a$ is set to be 0.1, and I will choose 20\% of training data randomly to train at each iterations.
 
-\paragraph{NAG} Learning rate $\eta$ is set to be 0.1, and I will choose 20\% randomly of data from training set to train. $\gamma$ is set to be 0.9.
+\paragraph{NAG} Learning rate $\eta$ is set to be 0.1, and I will choose 20\% of training data randomly to train at each iterations. $\gamma$ is set to be 0.9.
 
-\paragraph{RMSProp} Learning rate $\eta$ is set to be 0.02, and I will choose 20\% randomly of data from training set to train. $\gamma$ is set to be 0.9 and $\epsilon$ is set to be 1e-8.
+\paragraph{RMSProp} Learning rate $\eta$ is set to be 0.02and I will choose 20\% of training data randomly to train at each iterations. $\gamma$ is set to be 0.9 and $\epsilon$ is set to be 1e-8.
 
-\paragraph{AdaDelta} $\gamma$ is set to be 0.95 and $\epsilon$ is set to be 1e-6.
+\paragraph{AdaDelta} $\gamma$ is set to be 0.95 and $\epsilon$ is set to be 1e-6. I will choose 20\% of training data randomly to train at each iterations.
 
-\paragraph{Adam} Learning rate $\eta$ is set to be 0.01. $\beta_1$ is set to be 0.999 $\beta_2$ is set to be 0.999 and $\epsilon$ is set to be 0.001.
+\paragraph{Adam} Learning rate $\eta$ is set to be 0.01. $\beta_1$ is set to be 0.999 $\beta_2$ is set to be 0.999 and $\epsilon$ is set to be 0.001. I will choose 20\% of training data randomly to train at each iterations.
 
-The weight matrix in my experiments is initialized randomly. The other parameters which will be update at each timestamp is set to be 0.
+The weight matrix in my experiments is initialized randomly. The other parameters which will be update at each iterations is initialized to be 0.
 
-Before training in logistic regression model, I set all the -1 label to 0 label. It can help me apply corresponding formula into this dataset easily. The iteration's number is set to 500. The loss value of test set is described in Fig.~\ref{fig_1}.
+Before training in logistic regression model, I set all the -1 label to 0 label. It can help me apply the formula of logistic regression into this dataset easily. The iteration's number is set to 500. The loss value of test set is described in Fig.~\ref{fig_1}.
 \begin{figure}[htbp]
 \centerline{\includegraphics[height=150px]{line_1.png}}
 \caption{The loss value of test set in logistic regression.}
@@ -394,9 +394,9 @@ In the linear classfication experiment, the parameters is set to be the same wit
 \label{fig_2}
 \end{figure}
 
-We can find that both of the loss of training set and test set decrease quickly at the beginning and close to unchange at the end of iterations. It means that the value of loss function is closed to minimal value. However, logistic regression can get a smaller value than linear classification. And logistic regression performs more stable since the curve of classification which is update by RMSProp is not smooth.
+We can find that both of the loss value of training set and test set decrease quickly at the beginning and close to unchange at the end of iterations. It means that the value of loss function is closed to minimal value. However, logistic regression can get a smaller value than linear classification. And logistic regression performs more stable since the curve of classification which is update by RMSProp is not smooth. In Fig.~\ref{fig_1} and Fig.~\ref{fig_2}, we can find that Nag and RMSProp always optimize very fast.
 
-After finish training, I set a threshold to classify the data in validation set. I set the threshold to be 0.5 in logistic regression model, if the value calculated by model is smaller than 0.5, the corresponding data will be classified into one class (the label of this class is 0). If the value is larger or equal than 0.5, the corresponding data will be classified into another class (the label of this class is 1). The threshold in linear classification is 0. And then I calculate the precision, recall and f1-score which is shown in Table~\ref{table_1} and Table~\ref{table_2}.
+After finish training, I set a threshold to classify the data in test set. I set the threshold to be 0.5 in logistic regression model, if the value calculated by model is smaller than 0.5, the corresponding data will be classified into one class (the label of this class is 0). If the value is larger or equal than 0.5, the corresponding data will be classified into another class (the label of this class is 1). The threshold in linear classification is 0, and the label is -1 and 1 respectively. And then I calculate the precision, recall and f1-score which is shown in Table~\ref{table_1} and Table~\ref{table_2}.
 
     \begin{table}[!hbt]
 		% Center the table
@@ -412,9 +412,9 @@ After finish training, I set a threshold to classify the data in validation set.
 			% For a linebreak type \\
 			gradient descent  & precision & recall & f1-score & support \\
 			\hline
-			Traditional & 0.84 & 0.72 & 0.74  & 16281 \\
+			Traditional & 0.84 & 0.79 & 0.80  & 16281 \\
 			\hline
-			NAG & 0.85 & 0.68 & 0.70  & 16281 \\
+			NAG & 0.85 & 0.71 & 0.73  & 16281 \\
 			\hline
 			RMSProp & 0.58 & 0.76 & 0.66 & 16281 \\
 			\hline
@@ -454,10 +454,10 @@ After finish training, I set a threshold to classify the data in validation set.
 		\end{center}
 	\end{table}
 
-From Table~\ref{table_1}, we can find that the traditional gradient descent and NAG get a better result than the other in logistic regression. I consider that it may be the problems from hyperparameters. I don't adjust a good value for other methods. However, we can find that the result in Table~\ref{table_2} is a bit different in Table~\ref{table_1}. Some methods perform quite different in two models. I consider that the hyperparameters which is suitable to one model may not be also suitable to other models.
+From Table~\ref{table_1}, we can find that the traditional gradient descent and NAG get a better result than the other in logistic regression. I consider that it may be the problems from hyperparameters. I don't adjust a good value for all of the methods. However, we can find that the result in Table~\ref{table_2} is a bit different in Table~\ref{table_1}. Some methods perform quite different in two models. I consider that the hyperparameters which is suitable to one model may not be also suitable to other models.
 
 \section{Conclusion}
-In this experiment, I implement gradient descent in logistic regression and linear classification. And I use different kinds of gradient descent to optimize the models. I find that the hyperparameters play important roles in models. Hyperparameters will influence the result directly. And the result of two models also show that the hyperparameters which are suitable to one model may not suitable to other models. How to set a proper hyperparameters to models is an important problem.
+In this experiment, I implement gradient descent in logistic regression and linear classification. And I use different kinds of gradient descent to optimize the models. I find that the hyperparameters play important roles in models. Hyperparameters will influence the result directly. And the results of two models also show that the hyperparameters which are suitable to one model may not suitable to other models. How to set a proper hyperparameters to models is an important problem. Different gradient descent methods can lead different curves of the same loss function. It means that each of them may be suitable for different kinds of data. 
 
 % Your document ends here!
 \end{document}
